// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/list/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-meta"
            >
              <div
                class="dcloud-list-item-meta-avatar"
              >
                <span
                  class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                >
                  <img
                    src="https://joeschmoe.io/api/v1/random"
                  />
                </span>
              </div>
              <div
                class="dcloud-list-item-meta-content"
              >
                <h4
                  class="dcloud-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 1
                  </a>
                </h4>
                <div
                  class="dcloud-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-meta"
            >
              <div
                class="dcloud-list-item-meta-avatar"
              >
                <span
                  class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                >
                  <img
                    src="https://joeschmoe.io/api/v1/random"
                  />
                </span>
              </div>
              <div
                class="dcloud-list-item-meta-content"
              >
                <h4
                  class="dcloud-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 2
                  </a>
                </h4>
                <div
                  class="dcloud-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-meta"
            >
              <div
                class="dcloud-list-item-meta-avatar"
              >
                <span
                  class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                >
                  <img
                    src="https://joeschmoe.io/api/v1/random"
                  />
                </span>
              </div>
              <div
                class="dcloud-list-item-meta-content"
              >
                <h4
                  class="dcloud-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 3
                  </a>
                </h4>
                <div
                  class="dcloud-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-meta"
            >
              <div
                class="dcloud-list-item-meta-avatar"
              >
                <span
                  class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                >
                  <img
                    src="https://joeschmoe.io/api/v1/random"
                  />
                </span>
              </div>
              <div
                class="dcloud-list-item-meta-content"
              >
                <h4
                  class="dcloud-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 4
                  </a>
                </h4>
                <div
                  class="dcloud-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/grid.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split dcloud-list-grid"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <div
          class="dcloud-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/grid-test.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split dcloud-list-grid"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <div
          class="dcloud-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-list dcloud-list-split dcloud-list-grid"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <div
          class="dcloud-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-list dcloud-list-split dcloud-list-grid"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <div
          class="dcloud-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
            <div />
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
            <div />
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
            <div />
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
            <div />
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
            <div />
          </div>
          <div
            style="width:25%;max-width:25%"
          >
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        title
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/infinite-load.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    id="scrollableDiv"
    style="height:400px;overflow:auto;padding:0 16px;border:1px solid rgba(140, 140, 140, 0.35)"
  >
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height:auto;overflow:auto;-webkit-overflow-scrolling:touch"
      >
        <div
          class="dcloud-list dcloud-list-split"
        >
          <div
            class="dcloud-spin-nested-loading"
          >
            <div
              class="dcloud-spin-container"
            >
              <div
                class="dcloud-list-empty-text"
              >
                <div
                  class="dcloud-empty"
                >
                  <div
                    class="dcloud-empty-image"
                  >
                    <svg
                      class="dcloud-empty-img-default"
                      height="152"
                      viewBox="0 0 184 152"
                      width="184"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <image
                        height="152"
                        href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGUAAABDCAYAAACFicvkAAABTWlDQ1BpY2MAAHjarY0/KIRxHIef nz9dHYq8bjD9yp8MiDOwGO4oEXVkuPdM7733h3qdX+/7FjcpFqOSQZkYrIwyMBgkA4kMIquRkuL6 GY7uLCbP8n16+tQXKlotpZwqYD7nu1MjURk3EzLwRIAAdYSQlu2pSCw2DvBzf/N2iwC47rKUcs6b N1falusnBrYab66em1b4m2Aq7dnAJ5C2leuDSAEti77yQawBhhs3EyC2ASNb9H3ASBb9FDDc6akh EHeAtGetFIh3oDNZ1rNl/v0XoGZ4zlOOlZexPv4dP73kAwwtqLw7l531ZUQpJy1Hc3Z3pwz39PZD 3EzI4vp1EgGI0EWprT7C4LHW+qjUxo7hoB+Ch6XWMQANNXB2qCzXAqASqMhk4GUP6kxovITgjJfp CwMgaqNQ/aD1azsENqCwrvXHjtaFXai8h5PcFxUhZe44el47AAAAIGNIUk0AAHomAACAhAAA+gAA AIDoAAB1MAAA6mAAADqYAAAXcJy6UTwAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfmAhkWNyGf 3XbiAAAWa0lEQVR42tWdWZAdx5Wev5NVt+7aC0DsBEASBAgSJEFxE7fREBIp2qIwEscOKqzZIjQj xsQ8OGIi5t32zJsfHGH7wWGFH2w/yg+WRqI4IkWZEgmSArgKBMAFBAmCABrdQK93rczKPH6oe7sb QKPRALobPX/Ejb73Vt3KqvPnf87Jk4mEqCorCFuBp4BvAl8HjgMvd1+vA+n1vsHlgFxnUvqAPcwQ sXOec9vAPmZIeg9YUT1qsbDcpBjgAXISngIeBgpXea1R4NfMkPT5cj7IUmI5SLmZXAVPqfJEalmF QGQgisDI/D92GVgHhTh/yaXP/4wZgv4fOWn/LLEUpPTTdUnnxvlOvcWWLIMeETBjWA0QQn4sjqBU hHYKaQcyzY+pQvCQBSUEQTUns1KGgRqsXQXF5KJ7CMD7wK/ISdoHdK63sReKxSAlAh6kqwbg4ZEx 4sl6bugoyskQmUUG0OvwquADeJ+ronc7PUJ8UIIK3kPoEeQV74XM57+rVWDbFli7+pL32CFPFHpK epecuBWJqyXlFmaC8xPAYO/AVBNGzkG5PLdrUp1FTrfpHikh5O9D95XNeh9CTor3uWJ86BIWBO8V mwm33Ai7bl3Q/Y8BrzCjpGPXm4jZWCgp/cA3ZhGx/ZJPOwmjE1At58afTUKPiMx3jd/t/T0itGv4 EHI1qeaftfu5R1wI4PV8In2muCB8Z8+8cedSOM6Min4NnFuxpJw6l942UI3+d60cP0juphaEk2fy 2FBMznddPUJEYLAP+qqXv1ajBQc/VqIoV0TPleUqoaua3J0VCvAvHrtmm2g7DR+0OuHvbhiIX14W Fi6Ame9gUF0/NpE+fGq4FU3ULVm2MDe8eQPctCmPG60OdFKwWd6jAdIUjp/KVXU51CqA5PEjJ0Rz 9agQgnSVlf+9746rN0TmA5MNy+mRlpwda+9utuzCHOESIF7IST4oUw3HVMNRTAy1SoFKKULm8RNJ AbZszN9bB+fGodEGAgwOwPabFn6T5SI0mooi58eWLkk+5CR9chxKJeirLOy6qkqr42m2Mzqpv04U XIwFkTIbqQ2kNmVMoFqOqVViksL8ni0pwKZ1C28jBBidhDWDuavr74OJuiB0448yKyPL02TvldPn hOHX4duPz5kmz3qGnIhWOyOswJrAvKQcOnzSbd28+ou+avGifq0KjVZGo5VRiA21Sky1HGMuNxqc B802nBhSxidzd/SR5rGnv5arVS5USpjl0oKAQuqVdioXkeK90mxnNNsOl83PRL3eOvP+B593/vRf f3XlkfKrN48Vgv/0ptWDFXZtX8edO9ZTrVzcBV0WGJ+yjE9ZKqWIWqVAMTHzure5oApxJCQJtNr5 53PjMDIGojKtkDBbLd10WslT8PvvFAb7etdT2l331L6Me6rX27z59ke8+vohPj8xvMGIlFYkKd1H Y3SiyasHjvHqgWPcvHk1d+/cwPab1hJFFxu91fG0Op4oEmrlmGolJo7M5ZshD+o7uppMLQydzZOB RhvardnjFsV33VYSw9pVwub1eYJRiME6T6N1effkfeD9Dz7j1TcP897BY3i/MsaTCyBF6I3BgwaO fXGWT4+fpVSMuXPHenbffiPr1/bN8cDKZMMx2XCUkohqJb5scjAbxQRuvjF/Qa6ajmU6DY4iqJRm tRdy93RuPMNdJkv8/IsR9v3uEK8f+JB6vX29ObgI85JyavjUujUDa1wUxQXtjeAQVAOttuXA+1+w //3jrFtT4547NrN75ybK5YvdW8d6OtYz3k0OqpUCSWFh6ulBJM/CZkNVaaeeZuvy7ml8ssmbB47w 29cPc/L0/GPDEJxvTI5dQX64uJiXlMnh0ZHRU8OFSrXK4OAg1f7B6ZpVr0aiqpwZnmJo+DAv/fYI t21bx313bWX7zWsvUkVQqLcy6q2MpGBygq4iObAu0Gw7mu0sL2he8jzPe7//lFffOMTBI8cJ8/gy 1UCnNUWrMUa7NRmhfLESSYl27br5joMHj9Jq1GnUpzDmFP39/fQNDFIql1EUnUVO5j2HPz7NoY9O UqsUufeurdx391bWrJ5xb62OxVrPYH8Z6ywTU5ZyOaZWjudNDkLoZU8Z1s3vno4eO82rbx5m/9sf 0WzNP1lp0xat+iit5jjBZ9Pf77htx44jR0h27cIuNylzlVlk+Fz7H4Py9X1vHZUf/c9fVOkaXzWg QQElSYrUBgbo7xvExBEalKB5aTeEgGre+0JQbtq8mgd238I9u7Zw9LMhPvx0iHVrV3HnzhtZPVCZ rlXFkVDtptZxZFBVOml3TNGZ3z2NjtbZt/8Ir75xiDMj4/Oe6zNHszFGqzFKZueu6D/7vX/V/vPv f/t4tVz8p21b+v7uupJyctje3V+VV/qqhRsm6x39yQtvh5d++3uGR8YjUFCmja+qiCjlSo2+/kHK lVr+PUoIioaQqynk58aR4e5dm3no3lsZG5ti86Yb+F8/fo0ffP9xJhspt90yM8IsJoYsU/w8Lie1 jgPvHmXfm4c59OH83iZ3T5M0G2N0mlNcaiZ51apB9+Q3HnX/5tm95TVrBgUY3bqxuo5lLPVfRMrZ 8fS/rupP/m08K931QXnv0Bf6wsu/928c+DBK07T7u67BUVDFmIhqrY9a/yCFJMl9+LRyZqlNldWD NR68dxu7tm9i06Yb+M//7af8zV8+TaVSvOxNf/jJl7z25hEOvPMx7c783sWmTdqNcdrNCbzPYJbL 7aFQKISHHvpK65m9T5YfuP+u6EIXakS+vXlD5YXrQsrJs+mO/rL5WX+tcPulftBoWX71m0PhxVfe DR8d/TIKIQgwbWy6bisplqj19VOu9mPEEEIAZggKXfUIyo5bN/DI/bexe9dNFC5Rsjl7bpJ9+z9k 35tHGDk3MU3yXPDe0mlO0m6O42yat6t5R9eZzEB37tjW3vvtr0dPPvFosVIuX9pIIj/bsqHy3etC yshY5+9X9Rf/XSG+fDYUFI6fPKfPv/h2+PWrB2V8fMqEbtqsPQN0/5YrNSrVAUrlUj5H0lNQN0aF LqHlUsID92zj0a/u5KbNa2l3LG+99yn79n/I0U9PEXpqm6W8aQtrIG3X6bQmSTsNZuJgrs7cWymr Vq9yTz35mH1m7xOVDRvWLijtExEvBblp8w3lU8tKyqmx9uZqEj8/WCvcc6UXcVngjbc+0Rdeetvv f/ejyGWZ9OJIlyUUxUhMpVqjXB0gjuNcNWieFIQw8zko69b2MzpWJ03djHFDyInpkgKKs206rSnS dp2gfloJ02QAxSQJDz10T/OPv/Nk+Z67b7/iIiyAEfn3mzdU/mFZSRkeS/92VV/hPyUFc2WjullQ hfHJlv7i5XfCL3/9jn72+ek477E9Bc3En0JSplLto1iuTf94duwJIXQThS5hXVWpKllm6bSnSFtT eO+mk47cTWlvDKU7d97S+qOn90RPPP5wsZAUrr5SCghyYsvGyi0sQ8AXVWWozpqS2udX9ScPLdaF fVA++uS0/uMv9/tXXvu9marXDV0Da57CoShiDKVilWKljyQpTseaC91UlmWknTrt5iSZ63RjGOTJ xoy7XLdujf3mNx5O935rT23NmlXXRMSFiET23rih8otlIeXMWOcHq/qSHxUL5moXxs2Ldup45bXD 4Rcv7vfvHPwkDj6T3jim18sVJY5iknKNUqkPMRGqStpu0G5NknaaXePPqKKX+ZWSYnjk4Xsa3927 p3LH7bdelXtakLGWKeDL6Kj2a5T+7IaB4uNL3VhQGBqe0J/9037/y5cPyKnTI5F2xwuz44QqFJIi mUvxmcuPc356bYzRO27f1tz7rT8wX3v0gXIcR4uqijmNtUwBX74Y7myrFnm+r1LYeS3x5EqRZcq7 Bz8LP3nhDf/a6+/FrXZHetWC2eMZmJ1uKxs3rE2/8fWvpt966mt9qwf7lpyIC2FE/sPmDZW/X8o2 8pgy3tlqgny3UOB7lVJ8b1KIqtcwgXhFUIV6y+qLL78Vfv7L34UPDh+NVVV6sUKBarUcHn7wrvof Pf14Zfu2LUviYhdmLfkc5T9u3Vj50ZI2MzvXHxujvx3SP0yi8A9JIbq3Vi7MOZG1VPBe+fzkiP7k 5/uyl14+EDZuWGO/9S//wDzy4N0VY65iNdeiWEgy4Kdi9H9sWVf9Fcuw0n/OdV/HTkz+tc3cf6+U EqrlAn3VhGKy4GVf14wQYOhs02deoyudUl68ewg4lxGQv9158+B/Wc62L5WpBO8D9WaHZitlol6g VinQVytSKcZXswLxitBoOVqd1IIpF5Pl81aqkGUZNsvwvluVFmks2w10cdn0MajSSS2pdUw2Umrl hFo1Yalcmw/KRL2Dcz4onqQQX/ECjCtFCAHrcjLQJfdOl8WCc3pVxbmMcZcx2ehQKydUygn9tcJl 131dCaYaKc12iohobixHMUmu/cJzwLkMm7kVs2CihzlJSUrxiSx4MufROeJaCIGpZod6K2WyUaBa LjBQK1EqRtfk2jKvTDUs3gdMNzu3LiMpFBZNLd7nRGfZ3M+2EjAnKQYzVS4W0aKSZR7r5u5N+boq Szt1XfUU6asWqVZioqvIqSfrKa1WPj8iItpr41rVoqq4LMO5DB9WlirmwrzuSxAKcUwhjvEhYK3D +ezipFAV5zwTrsVUo0O1kru2gVpCIV7YeNRlylQjxWvPaDONWHt1asm8x7ls7nteILwPG8kXwi8b mwuOKZExlEtFSprkD+qyWQacMaMPgalGh0bLMtWIqZYS+mvFy7q2yXp6/iyiyqzrLlwtvdjnssVR hXPhD/e98yUBDhTK8vYjuzaPLaL958QVF+9EhCQpkCQFfPBYm5Fl2UUdMYR8bVi7k7u2aiWhr5JQ rRQucm2p9Uw12nnZfca8F5zj5lVLTxWZzxY7gZJAGIjEPO474dE33j35KUHfL8rIx/fff79b1Ja6 uKaKamQiyqUI1QTb7Z3hgt6Zx4QMN5kxVe9QrRTzMU+1SG+Gc6Ju6aTZBb+7uL3UOkqzVm5PX3uO dhcLqioERI0aMUhQvckY3eTiDV/73aGTH4aQHnl0960ji9nmopS5RYRiUqCYFPLEIMuzm/Mejp5r a9NopUxMpVTL+aC03uxcoBIQg3LBqiKbOYpJAR8CznZjxdJDVDBBEQkihmAwkWigSDB3RlK67cD7 QyNRxEcD5Y2fb99+7btiLPrcQxxHxHE0qxe7i1YmhhBodVLaqWWibnDZHGu65nJBCvVWa9n3mRBV MZEIBIMYBEQ1GIMYIkFDtioL8sBo69RdE0eiE0kmx3fvXn+Wq7zTpZwQOl89zpH5C9SjOjchzKTE F2G5CRERjBENCCDGiAkahEhMUMSEYFTExCbKDwe9sWP82g+Onq2Dnmycs0OPPLL5ilaRLxkp5zXS VU/ojjmcyy65PKiHlTKsUxANQUBMFBkCQURm7QogRiKE4IMgYjAicRyLs1nZRLK1vDrZ+MEno6NR VhjZtat/ggWk1stCSg9GhFKSUEqSvPDnsovUsyIhRgQVVTWKGEwwERFIMBrEhEgMiImjXE0heGNE JAQxiojErj8koXzo6NB64mis5NdNzBd7lpWU8xqO4+llRr0MaoVtc9VFEFE1QVREpZuRG1QxICaS CCWAICHkcccgQgQCIpIZ741Rn4lgIo3MQBZPlA99bts3lHx948aNHS5Qz7JN/14KxhhKxYRapUKp VCSOlm/eZiFQFVGCCEbEICLBCGKku5OJdtUiIZicBEQQCV6MF28gj0uJFEQEMZkY56wJPi60Wn21 D05MDhw/frzELC6uOyk9iEASx1TKJWqVMnEUrZRdiCSoiGowBEQDohokSBCR3H45QREhBOO9iBcv EiPiRUTECJl4kxkRESdWbM6qpFHbALSq1fjIEWK6RK8YUmbDGEMUmRVBiqpKZBDBoKIGEZHcdUmg S5YgKsEQQRwjJmBCCEYE8d4LEgsUyIyYkhQlcmKcTY20RQqthonGRJLk0+lSxZykKFETZNn/scxK hCB5/BA1ovmOJhiQkLMSghhBBCIkYIJHiCJEEC+ISCzBe2OyzIhz4qyVYhFKpTIdg3RKVd9ofNHZ vn27pZt0zhnoN69LDg7VkxuzRvsvVMIPUa5hg41/nlDIXOZPuszPLqEIIBrEYDBKkNhEBA0GxChi jAkGiQWvEkeSn08MhYBIIogX58SYxHaKO9eN7wLLzfef1/aCdjE6PdJ+zAd9DuVZRRe4yca1IfP+ rVa78+Ay8oCIqHPZeJr6E21rj4dAR0SsCFbEWBGxYrCCOlWxBpzEUSqojRCnRiwhOBPF1qjaKBab YVwkwYKxkfqUQnGkwtjZ7du3XzIlvqL9vsbHGWikrT9R5Yeg9y2lgZaTFB+03e5kI622OxWCryPi jGABm783VlCL4IyJLBqsGLGCOGOwOUHqNBIbmygFdRFiFbGgrpDQDkG+TMLY6V27dl02LFz1znhD 51r3ZRnPKfonKP2LbailJkUV3+64qUbbnrPOT4rijJEUESeCFbAi4gAbGbEKzohJMeqEXCUqYoVg jYmsoi42UUpkHD44MZIaooZq59MH7t56Alhw9fSatyscgkp2pvk9Vfkh6LXvtrW0pGi742yjbRvt NJskqBNjrAErgkOwYKwRLKLOGGNRdSIm7/2RsQJWERdFpIo4I2JzksQpwRojFmW0VIoPf3zw1RPP PvvsFZcsFnVjz6Ehe0dm3HME/lxhzUohJbVem+3UTTXSFKUD5GrIXZAVcpWoiDPgBKyYnAgjxopM E2EVrEGdiOTfGVIQF0mUSiSngk/ff/grN3/BNZTvlmoL3OTL4fYfawg/FJEn8rXBy0tK5gP1ZspU I8U5H4yIpasIY8SKSAriRHCANSIWI9bkrqtrdJwx5MSJsSLBCuJEjFXURlFkkeAiMR8r7H/kns2L shp/qWpfdsv68o+BHw8Pd26xEv4K5QeqummJ2gPyhYPNlqPe7NBqnzdTK6pqxIhBpFv5VWOE/LMi ajBGEVCjYgTNSyZgUDQvC6sYFURExWAU5ZBExX0P716/qDOPy7mDd3RiuPW0KM8BT6vqvEWuK1FK q+OoN1OaTXvRDOb0g4pYQV3ussx0DJGueropb2oMTlWtMWZaMUaweVDHGZFGUN03mPCbr3zl5oml MNRyVon91vWVnwM///Jca5M4+YEKf4XqLVdzMec8U82UeiMlW9AKR+2qQgTRvG5Ir26VFzYUNZrX 5kVRI/lRUUWMSDPAi51i6TdP7V7fXEpDXe//gEBOjKRPSMieU5VnQKdXRcyllOAD9ZZlqpmSplc2 Py+Ix2ANOLrxxeSDQicGi5JnTrkynCgWwYoxJ2Php2v72r9dyBhjMXDd5lO60K3rii9D8eWhOmvm LOsoNNopjaal2bZXvXxINZ8P6U0YGkEQjKIiQXpFLhEwCmKMOSYq/2f0y7dfv5q09lpwvZUyJ06P tB9rpvaZU6fH/nqqmfaFRdh9U0RUIB+VIxZDXj5BHEJqxIwIOiRGjgvm/37zsW1vX6/nX5Gk9PD8 O0MVPz75jIr+mcA3Va9Q2bkbOqMiZ0QZQuSkQU8hnA7CUIQ5YyQbrjBybs+ePcuyXmlBt72SSZmN l944tq7Tzr6vqn8GeocKZ1CGRGQIGMrfM2SEIR8YimIztHfPbaOsnDUYC8b/B0xgn0hb8IYXAAAA JXRFWHRkYXRlOmNyZWF0ZQAyMDIyLTAyLTI1VDE0OjU1OjMzKzA4OjAwSAY9JQAAACV0RVh0ZGF0 ZTptb2RpZnkAMjAyMi0wMi0yNVQxNDo1NTozMyswODowMDlbhZkAAAASdEVYdGV4aWY6RXhpZk9m ZnNldAAyNlMbomUAAAAYdEVYdGV4aWY6UGl4ZWxYRGltZW5zaW9uADEwMTE1cPsAAAAXdEVYdGV4 aWY6UGl4ZWxZRGltZW5zaW9uADY3WCe+WAAAACh0RVh0aWNjOmNvcHlyaWdodABDb3B5cmlnaHQg QXBwbGUgSW5jLiwgMjAxN7/zGNAAAAAadEVYdGljYzpkZXNjcmlwdGlvbgBEaXNwbGF5IFAzj3m7 vAAAACB0RVh0c29mdHdhcmUAaHR0cHM6Ly9pbWFnZW1hZ2ljay5vcme8zx2dAAAAGHRFWHRUaHVt Yjo6RG9jdW1lbnQ6OlBhZ2VzADGn/7svAAAAF3RFWHRUaHVtYjo6SW1hZ2U6OkhlaWdodAA2NyXp +D4AAAAXdEVYdFRodW1iOjpJbWFnZTo6V2lkdGgAMTAxm2fL+wAAABl0RVh0VGh1bWI6Ok1pbWV0 eXBlAGltYWdlL3BuZz+yVk4AAAAXdEVYdFRodW1iOjpNVGltZQAxNjQ1NzcyMTMzYrcSUwAAABJ0 RVh0VGh1bWI6OlNpemUAODU2N0JCHuFerAAAAEZ0RVh0VGh1bWI6OlVSSQBmaWxlOi8vL2FwcC90 bXAvaW1hZ2VsYy9pbWd2aWV3Ml85XzE2NDU3NjY4ODkxNDg3MTc3XzI0X1swXSRa9pUAAAAASUVO RK5CYII="
                        id="image0"
                        width="184"
                        x="0"
                        y="0"
                      />
                    </svg>
                  </div>
                  <div
                    class="dcloud-empty-description"
                  >
                    No Data
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dcloud-skeleton dcloud-skeleton-with-avatar dcloud-skeleton-active"
        >
          <div
            class="dcloud-skeleton-header"
          >
            <span
              class="dcloud-skeleton-avatar dcloud-skeleton-avatar-lg dcloud-skeleton-avatar-circle"
            />
          </div>
          <div
            class="dcloud-skeleton-content"
          >
            <h3
              class="dcloud-skeleton-title"
              style="width:50%"
            />
            <ul
              class="dcloud-skeleton-paragraph"
            >
              <li />
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/loadmore.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split dcloud-list-loading demo-loadmore-list"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div>
        <div
          class="dcloud-spin dcloud-spin-spinning"
        >
          <span
            class="dcloud-spin-dot dcloud-spin-dot-spin"
          >
            <i
              class="dcloud-spin-dot-item"
            />
            <i
              class="dcloud-spin-dot-item"
            />
            <i
              class="dcloud-spin-dot-item"
            />
            <i
              class="dcloud-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="dcloud-spin-container dcloud-spin-blur"
      >
        <div
          style="min-height:53px"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/resposive.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split dcloud-list-grid"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <div
          class="dcloud-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div>
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="dcloud-col"
              style="padding-left:8px;padding-right:8px;flex:1 1 auto"
            >
              <div
                class="dcloud-list-item"
              >
                <div
                  class="dcloud-card dcloud-card-bordered"
                >
                  <div
                    class="dcloud-card-head"
                  >
                    <div
                      class="dcloud-card-head-wrapper"
                    >
                      <div
                        class="dcloud-card-head-title"
                      >
                        Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/simple.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-divider dcloud-divider-horizontal dcloud-divider-with-text dcloud-divider-with-text-left"
    role="separator"
  >
    <span
      class="dcloud-divider-inner-text"
    >
      Default Size
    </span>
  </div>,
  "1": <div
    class="dcloud-list dcloud-list-split dcloud-list-bordered dcloud-list-something-after-last-item"
  >
    <div
      class="dcloud-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <span
              class="dcloud-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <span
              class="dcloud-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Japanese princess to wed commoner.
          </li>
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <span
              class="dcloud-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Australian walks 100km after outback crash.
          </li>
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <span
              class="dcloud-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Man charged over missing wedding girl.
          </li>
          <li
            class="dcloud-list-item dcloud-list-item-no-flex"
          >
            <span
              class="dcloud-typography"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="dcloud-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-divider dcloud-divider-horizontal dcloud-divider-with-text dcloud-divider-with-text-left"
    role="separator"
  >
    <span
      class="dcloud-divider-inner-text"
    >
      Small Size
    </span>
  </div>,
  "3": <div
    class="dcloud-list dcloud-list-sm dcloud-list-split dcloud-list-bordered dcloud-list-something-after-last-item"
  >
    <div
      class="dcloud-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item"
          >
            Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="dcloud-list-item"
          >
            Japanese princess to wed commoner.
          </li>
          <li
            class="dcloud-list-item"
          >
            Australian walks 100km after outback crash.
          </li>
          <li
            class="dcloud-list-item"
          >
            Man charged over missing wedding girl.
          </li>
          <li
            class="dcloud-list-item"
          >
            Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="dcloud-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>,
  "4": <div
    class="dcloud-divider dcloud-divider-horizontal dcloud-divider-with-text dcloud-divider-with-text-left"
    role="separator"
  >
    <span
      class="dcloud-divider-inner-text"
    >
      Large Size
    </span>
  </div>,
  "5": <div
    class="dcloud-list dcloud-list-lg dcloud-list-split dcloud-list-bordered dcloud-list-something-after-last-item"
  >
    <div
      class="dcloud-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item"
          >
            Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="dcloud-list-item"
          >
            Japanese princess to wed commoner.
          </li>
          <li
            class="dcloud-list-item"
          >
            Australian walks 100km after outback crash.
          </li>
          <li
            class="dcloud-list-item"
          >
            Man charged over missing wedding girl.
          </li>
          <li
            class="dcloud-list-item"
          >
            Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="dcloud-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 6,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/vertical.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-vertical dcloud-list-lg dcloud-list-split dcloud-list-something-after-last-item"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-main"
            >
              <div
                class="dcloud-list-item-meta"
              >
                <div
                  class="dcloud-list-item-meta-avatar"
                >
                  <span
                    class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                  >
                    <img
                      src="https://joeschmoe.io/api/v1/random"
                    />
                  </span>
                </div>
                <div
                  class="dcloud-list-item-meta-content"
                >
                  <h4
                    class="dcloud-list-item-meta-title"
                  >
                    <a
                      href="https://ant.design"
                    >
                      ant design part 0
                    </a>
                  </h4>
                  <div
                    class="dcloud-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              <ul
                class="dcloud-list-item-action"
              >
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="star"
                        class="anticon anticon-star"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="star"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      156
                    </div>
                  </div>
                  <em
                    class="dcloud-list-item-action-split"
                  />
                </li>
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="like"
                        class="anticon anticon-like"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="like"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0142.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      156
                    </div>
                  </div>
                  <em
                    class="dcloud-list-item-action-split"
                  />
                </li>
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="message"
                        class="anticon anticon-message"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="message"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      2
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div
              class="dcloud-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </li>
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-main"
            >
              <div
                class="dcloud-list-item-meta"
              >
                <div
                  class="dcloud-list-item-meta-avatar"
                >
                  <span
                    class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                  >
                    <img
                      src="https://joeschmoe.io/api/v1/random"
                    />
                  </span>
                </div>
                <div
                  class="dcloud-list-item-meta-content"
                >
                  <h4
                    class="dcloud-list-item-meta-title"
                  >
                    <a
                      href="https://ant.design"
                    >
                      ant design part 1
                    </a>
                  </h4>
                  <div
                    class="dcloud-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              <ul
                class="dcloud-list-item-action"
              >
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="star"
                        class="anticon anticon-star"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="star"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      156
                    </div>
                  </div>
                  <em
                    class="dcloud-list-item-action-split"
                  />
                </li>
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="like"
                        class="anticon anticon-like"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="like"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0142.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      156
                    </div>
                  </div>
                  <em
                    class="dcloud-list-item-action-split"
                  />
                </li>
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="message"
                        class="anticon anticon-message"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="message"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      2
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div
              class="dcloud-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </li>
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-main"
            >
              <div
                class="dcloud-list-item-meta"
              >
                <div
                  class="dcloud-list-item-meta-avatar"
                >
                  <span
                    class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                  >
                    <img
                      src="https://joeschmoe.io/api/v1/random"
                    />
                  </span>
                </div>
                <div
                  class="dcloud-list-item-meta-content"
                >
                  <h4
                    class="dcloud-list-item-meta-title"
                  >
                    <a
                      href="https://ant.design"
                    >
                      ant design part 2
                    </a>
                  </h4>
                  <div
                    class="dcloud-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              <ul
                class="dcloud-list-item-action"
              >
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="star"
                        class="anticon anticon-star"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="star"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      156
                    </div>
                  </div>
                  <em
                    class="dcloud-list-item-action-split"
                  />
                </li>
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="like"
                        class="anticon anticon-like"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="like"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0142.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      156
                    </div>
                  </div>
                  <em
                    class="dcloud-list-item-action-split"
                  />
                </li>
                <li>
                  <div
                    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
                  >
                    <div
                      class="dcloud-space-item"
                      style="margin-right:8px"
                    >
                      <span
                        aria-label="message"
                        class="anticon anticon-message"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="message"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="dcloud-space-item"
                    >
                      2
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div
              class="dcloud-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="dcloud-list-footer"
    >
      <div>
        <b>
          ant design
        </b>
         footer part
      </div>
    </div>
    <div
      class="dcloud-list-pagination"
    >
      <ul
        class="dcloud-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-3"
          tabindex="0"
          title="3"
        >
          <a
            rel="nofollow"
          >
            3
          </a>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-4"
          tabindex="0"
          title="4"
        >
          <a
            rel="nofollow"
          >
            4
          </a>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-5 dcloud-pagination-item-before-jump-next"
          tabindex="0"
          title="5"
        >
          <a
            rel="nofollow"
          >
            5
          </a>
        </li>
        <li
          class="dcloud-pagination-jump-next dcloud-pagination-jump-next-custom-icon"
          tabindex="0"
          title="Next 5 Pages"
        >
          <a
            class="dcloud-pagination-item-link"
          >
            <div
              class="dcloud-pagination-item-container"
            >
              <span
                aria-label="double-right"
                class="anticon anticon-double-right dcloud-pagination-item-link-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="double-right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
                  />
                </svg>
              </span>
              <span
                class="dcloud-pagination-item-ellipsis"
              >
                •••
              </span>
            </div>
          </a>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-8"
          tabindex="0"
          title="8"
        >
          <a
            rel="nofollow"
          >
            8
          </a>
        </li>
        <li
          aria-disabled="false"
          class="dcloud-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/list/demo/virtual-list.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <div
          class="rc-virtual-list"
          style="position:relative"
        >
          <div
            class="rc-virtual-list-holder"
            style="height:400px;overflow-y:auto;overflow-anchor:none"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display:flex;flex-direction:column"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
